# Intel_Digital_twin

./: .gitignore  DEMO_SCRIPT.md  INTEGRATION_GUIDE.md  README.md  README_TECHNICAL.md  generate_better_data.py  phase.md  plan.md  pyproject.toml  start.bat  start.sh  test_frontend_features.py
Backend/: .py  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  setup.sh  train_models.py
Backend/app/: __init__.py  config.py  main.py
Backend/data/: real_data.csv
Backend/demo_machine_server/: README.md  database.py  main.py  models.py  schemas.py  simulator.py  urdf_to_glb.py
Backend/digital_twin_robot/: prompt.md
Backend/technovate_backend/: .gitignore  QUICKSTART.md  README.md  pyproject.toml  setup.sh  train_models.py
Backend/technovate_backend/app/: config.py  main.py
Backend/technovate_backend/app/ml/: failure_predictor.py  preprocessing.py  rul_estimator.py
Backend/technovate_backend/app/models/: schemas.py
Backend/technovate_backend/app/simulation/: __init__.py  physics_sim.py  rom.py  sensor_generator.py  urdf_parser.py
Backend/technovate_backend/data/trained_models/: anomaly_detector.pkl  failure_predictor.pkl  rul_estimator.pkl
Backend/technovate_backend/tests/: test_api.py  verify_frontend.py  verify_missing_features.py
Mock_generator/: README.md  crud.py  demo_backend_features.py  initialize_sample_data.py  main.py  requirements.txt  test_backend_features.py
documents/: how_to_prepare_python.md  phase1_data_acquisition_plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
videos/: README.md
(+63 files in other folders)
