[project]
name = "intel-digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mithrajith", email = "ksmithun94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
intel-digital-twin = "intel_digital_twin:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
